--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["nedsociety <nedsociety@gmail.com>"]
 mvko = "mvkoscript.cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.11"
 lxml = "^4.8.0"
 click = "^8.1.3"
 json5 = "^0.9.6"
@@ -16,6 +16,7 @@ json5 = "^0.9.6"
 [tool.poetry.dev-dependencies]
 xonsh = "^0.12.2"
 prompt-toolkit = "^3.0.29"
+pyinstaller = "^5.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
