Renaming mvko to mvloc

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "mvkoscript"
+name = "mvloc"
 version = "0.1.0"
 description = ""
 authors = ["nedsociety <nedsociety@gmail.com>"]
 
 [tool.poetry.scripts]
-mvko = "mvkoscript.cli:main"
+mvloc = "mvloc.cli:main"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.11"
