--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,20 @@
 [tool.poetry]
-name = "mvloc"
+name = "mvlocscript"
 version = "0.1.0"
 description = ""
 authors = ["nedsociety <nedsociety@gmail.com>"]
 
 [tool.poetry.scripts]
-mvloc = "mvloc.cli:main"
+mvloc = "mvlocscript.cli:main"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.11"
 lxml = "^4.8.0"
 click = "^8.1.3"
 json5 = "^0.9.6"
+polib = "^1.1.1"
 
 [tool.poetry.dev-dependencies]
-xonsh = "^0.12.2"
-prompt-toolkit = "^3.0.29"
 pyinstaller = "^5.0.1"
 
 [build-system]
