--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ polib = "^1.1.1"
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^5.0.1"
+snakeviz = "^2.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
