--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ lxml = "^4.8.0"
 click = "^8.1.3"
 json5 = "^0.9.6"
 polib = "^1.1.1"
+loguru = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^5.0.1"
