--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ click = "^8.1.3"
 json5 = "^0.9.6"
 polib = "^1.1.1"
 loguru = "^0.6.0"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 pyinstaller = "^5.1"
